Add server task

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ task wrapper(type: Wrapper) {
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
@@ -24,3 +25,5 @@ dependencies {
 
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-inmemory:2.25.1'
 }
+
+mainClassName = "de.uniba.dsg.jaxrs.JaxRsServer"
