Fixed jersey issue

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,7 @@
-task wrapper(type: Wrapper) {
-    gradleVersion = '3.5'
-}
-
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
@@ -18,11 +15,13 @@ dependencies {
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jdk-http', version: '2.28'
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.28'
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-moxy', version: '2.28'
+    // needed since version 2.26 and newer are not backward compatible
+    // https://stackoverflow.com/questions/44088493/jersey-stopped-working-with-injectionmanagerfactory-not-found
+    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.28'
 
     compile 'org.glassfish.jersey.core:jersey-client:2.28'
 
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-inmemory:2.28'
 }
 
-apply plugin: 'application'
 mainClassName = "de.uniba.dsg.jaxrs.JaxRsServer"
